--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "websocket": "^1.0.34",
+    "ws": "^8.9.0"
   }
 }
